--- a/templates/index.html
+++ b/templates/index.html
@@ -31,7 +31,7 @@
                                 <span class="tooltiptext">Brush</span>
                             </button>
                             <button id="eraserTool" class="tool-button eraser tooltip">
-                                <span class="icon">🧹</span>
+                                <span class="icon">🧽</span>
                                 <span class="tooltiptext">Eraser</span>
                             </button>
                         </div>
