--- a/templates/index.html
+++ b/templates/index.html
@@ -155,6 +155,6 @@
             </div>
         </main>
     </div>
-    <script src="../static/scripts.js"></script>
+    <script src="../static/scripts.js" type="module"></script>
 </body>
 </html>
